--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	</prerequisites>
 
 	<groupId>com.expanset</groupId>
-	<artifactId>expanset</artifactId>
+	<artifactId>expanset-parent</artifactId>
 	<version>1-SNAPSHOT</version>
 	
 	<packaging>pom</packaging>
