--- a/pom.xml
+++ b/pom.xml
@@ -141,10 +141,6 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
-		</dependency>			
-		<dependency>
-			<groupId>commons-configuration</groupId>
-			<artifactId>commons-configuration</artifactId>
 		</dependency>
 		<dependency>
     		<groupId>com.google.code.findbugs</groupId>
@@ -155,6 +151,11 @@
       		<artifactId>junit</artifactId>
       		<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>		
 	</dependencies>
 	
 	<build>
@@ -366,7 +367,7 @@
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.4.187</version>
+				<version>1.4.188</version>
 			</dependency>		
 			<!-- Web. -->			
 	        <dependency>
@@ -382,23 +383,23 @@
 			<dependency>
 		  		<groupId>com.github.spullara.mustache.java</groupId>
 		  		<artifactId>compiler</artifactId>
-		  		<version>0.9.0</version>
+		  		<version>0.9.1</version>
 			</dependency>						
 			<!-- Web-server. -->
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-server</artifactId>
-				<version>9.3.2.v20150730</version>
+				<version>9.3.3.v20150827</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-servlet</artifactId>
-				<version>9.3.2.v20150730</version>
+				<version>9.3.3.v20150827</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-xml</artifactId>
-				<version>9.3.2.v20150730</version>
+				<version>9.3.3.v20150827</version>
 			</dependency>
 			<!-- Validation. -->
 			<dependency>
@@ -410,17 +411,17 @@
 	        <dependency>
 	            <groupId>com.fasterxml.jackson.core</groupId>
 	            <artifactId>jackson-core</artifactId>
-	            <version>2.6.0</version>
+	            <version>2.6.1</version>
 	        </dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.6.0</version>
+				<version>2.6.1</version>
 			</dependency>  
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-annotations</artifactId>
-				<version>2.6.0</version>
+				<version>2.6.1</version>
 			</dependency>	
 			<!-- Security. -->
 			<dependency>
