--- a/pom.xml
+++ b/pom.xml
@@ -468,8 +468,8 @@
 			<!-- Arquillian. -->
 			<dependency>
 				<groupId>org.jboss.arquillian.container</groupId>
-				<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-				<version>1.1.2.Final</version>
+				<artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+				<version>1.0.0.CR9</version>
 			</dependency>
 			<!-- Unit testing. -->		
 	    	<dependency>
